2011-10-31  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: move localization support into UIUtil.js, reduce externs.
        https://bugs.webkit.org/show_bug.cgi?id=71220

        Reviewed by Yury Semikhatsky.

        * src/js/DevTools.js:

2011-10-31  Adam Barth  <abarth@webkit.org>

        [Chromium] The Chromium port calls OwnPtr::get and RefPtr::get way more often than needed
        https://bugs.webkit.org/show_bug.cgi?id=71205

        Reviewed by Ryosuke Niwa.

        WebKit style is to use the implicit Boolean conversions rather than
        calling get() on these pointer types.  This patch cleans up most (all?)
        of these style issues in the Chromium port in the hopes that they'll be
        copy/pasted less in the future.

        * src/ApplicationCacheHostInternal.h:
        (WebCore::ApplicationCacheHostInternal::toWebApplicationCacheHost):
        * src/AudioDestinationChromium.cpp:
        (WebCore::AudioDestinationChromium::AudioDestinationChromium):
        (WebCore::AudioDestinationChromium::start):
        (WebCore::AudioDestinationChromium::stop):
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::setMainDocumentError):
        (WebKit::FrameLoaderClientImpl::committedLoad):
        (WebKit::FrameLoaderClientImpl::finishedLoading):
        (WebKit::FrameLoaderClientImpl::redirectDataToPlugin):
        * src/PlatformMessagePortChannel.cpp:
        (WebCore::PlatformMessagePortChannel::postMessageToRemote):
        * src/ResourceHandle.cpp:
        (WebCore::ResourceHandleInternal::start):
        (WebCore::ResourceHandle::loadResourceSynchronously):
        * src/SocketStreamHandle.cpp:
        (WebCore::SocketStreamHandleInternal::connect):
        (WebCore::SocketStreamHandleInternal::send):
        (WebCore::SocketStreamHandleInternal::didOpenStream):
        (WebCore::SocketStreamHandleInternal::didSendData):
        (WebCore::SocketStreamHandleInternal::didReceiveData):