@@ -1,3 +1,14 @@
+2011-10-31  Joshua Bell  <jsbell@chromium.org>
+
+        IndexedDB: Remove null key support (part 2)
+        https://bugs.webkit.org/show_bug.cgi?id=71132
+
+        Reviewed by Darin Fisher.
+
+        * public/WebIDBKey.h:
+        * src/AssertMatchingEnums.cpp:
+        * src/WebIDBKey.cpp:
+
 2011-10-31  Pavel Feldman  <pfeldman@google.com>
 
         Web Inspector: move localization support into UIUtil.js, reduce externs.
